Test and Add RegisterViewModel

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,9 +2,12 @@
     <string name="app_name">E-Learning</string>
 
     <!--  Input Fields Error Messages  -->
+    <string name="error_empty_name">Please enter Name</string>
     <string name="error_empty_email">Please enter Email</string>
     <string name="error_invalid_email">Invalid Email</string>
     <string name="error_empty_password">Please enter Password</string>
     <string name="error_invalid_password">Please should be 6–16 characters long</string>
+    <string name="error_empty_conf_password">Please re-enter Password</string>
+    <string name="error_password_mismatch">Password does not match</string>
 
 </resources>
