--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,11 +6,17 @@
     <string name="error_empty_email">Please enter Email</string>
     <string name="error_invalid_email">Invalid Email</string>
     <string name="error_empty_password">Please enter Password</string>
-    <string name="error_invalid_password">Please should be 6–16 characters long</string>
+    <string name="error_invalid_password">Password should be 6–16 characters long</string>
     <string name="error_empty_conf_password">Please re-enter Password</string>
     <string name="error_password_mismatch">Password does not match</string>
 
     <!-- Login Activity  -->
     <string name="login">Login</string>
+    <string name="hint_email">Email</string>
+    <string name="hint_password">Password</string>
+    <string name="register_here">Don\'t have account? Register Here</string>
+
+    <!--  Register Activity  -->
+    <string name="register">Register</string>
 
 </resources>
